--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/wzzehui/-wzzehui-plugIn.git#develop"
+    "url": "https://github.com/wzzehui/-wzzehui-plugIn.git"
+    
   },
   "files": ["lib"],
   "author": "zzh",
